style.css
@font-face {
    font-family: 'Minerva';
    src: url('./MINERVAM.OTF') format("opentype");
}


body {
    background-color: #2d4756;
    color: seashell;
    font-family: 'Minerva', Helvetica, Arial, sans-serif;
    min-height: 600px;
    max-width: 100vw;
    padding-top: 100px;
    overflow-x: hidden;
}

#navbar {
    display: flex;
    justify-content: space-between;
    min-width: 100%;
    /* right: 0; */
}

#burger-icon {
    padding: 20px;
    right: 0;
}

#nav-burger img {
    height: 3vh;
    margin: 20px;
}

#nav-burger {
    position: fixed;
    font-size: 3em;
    min-width: 100%;
    min-height: 100%;
    z-index: 99;
    top: 2em;
    left: 0%;
    margin: 0 auto;
    justify-content: center;
    text-align: center;
}

#nav-burger-inside {
    position: absolute;
    top: 25%;
}

nav {
    display: flex;
    align-items: space-between;
    position: fixed;
    width: 100%;
    top: 0;
    z-index: 99;
    background-color: #2d4756;
}

#nav-logo {
    padding: 10px;
    margin: 15px 0 0 10px;
}

#nav-logo img {
    max-width: 55vw;
    max-height: 6em;
}

a {
    color: white;
    text-decoration: none;
}

a:hover {
    color: gold;
}

#toasttab-button, #reservation-button {
    /* justify-self: center; */
    height: 5em;
    border: 2px solid seashell;
    border-radius: 5%;
    padding: 0.5em 0.5em;
    margin: 2% 0;
    font-size: 1.25em;
    white-space: nowrap;
}

#menu-links {
    display: none;
    padding-left: 20px;
    padding-top: 20px;
    left: 0;
    position: relative;
    
 }

#menu-links a {
    font-size: clamp(1em, 1.5em, 3vw);
}

#menu-links img {
    padding: 0 5px 2px 5px;
    height: 0.5em;
    width: 0.5em;
}

h1 {
    font-size: 4em;
    text-transform: uppercase;
}

h2 {
    font-size: 2rem;
}

h3 {
    font-size: 1.75rem;
}

h4 {
    font-size: 1.75rem;
}

h5 {
    font-size: 1.5rem;
}

#menu1 {
    font-weight: bold;
}

#frontpage {
    display: flex;
    flex-direction: column;
    align-content: center;
    justify-content: center;
}

#address {
    text-transform: uppercase;
    padding: 0px 0px 20px 0px;
}

#glimpse-wrapper {
    display: none;
    justify-content: center;
    flex-wrap: wrap;
    max-width: 90%;
}

#glimpse-wrapper figure img {
    min-height: 100vh;
    overflow-x: hidden;
    border: 4px double goldenrod;
    box-shadow: 1px 1px 6px black;
}

#reviews-wrapper {
    display: none;
    flex-direction: column;
    align-items: center;
    justify-content: space-evenly;
}

#reviews-wrapper img {
    border: 4px double goldenrod;
    box-shadow: 1px 1px 6px black;
    min-width: 50%;
}

#reviews-wrapper figure img {
    min-width: 30%;
}

#daily-review img {
    max-width: 80vw;
}

#crew-wrapper {
    display: none;
    text-align: center;
    line-height: 1em;
}

#crew {
    justify-items: center;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-evenly;
    margin: 0 auto;
}

#crew figure {
    max-width: 70%;
    padding: 10%;
    margin: 0 auto;
    
}

#crew img {
    height: 550px;
    border: 4px double goldenrod;
}

#crew figcaption {
    text-align: center;
    line-height: 1.3em;
    font-size: 1.25em;
    color: gold;
    margin: 0 auto;
    text-shadow: 0px 0px 20px goldenrod;
}

#music-wrapper {
    display: none;
    text-align: center;
    text-transform: none;
    margin: 0 auto;
    padding: 0em 1em;
    
}

#music-wrapper h3 {
    color: goldenrod;
}

#music {
    justify-items: center;
    display: flex;
    flex-direction: column;
    margin: 0 auto;
}

.show {
    margin: 1em auto;
    /* min-width: 50vw; */
    border: 4px double goldenrod;
    display: flex;
    flex-direction: row;
}

.show-pic {
    /* max-width: 90vw; */
    border: 4px double goldenrod;
    /* max-width: 30em; */
}

.show-info {
    text-align: center;
    color: gold;
    margin: 0 auto;
    font-size: clamp(1.0em, 1.25em, 1.5em);
    text-shadow: 1px 1px 0px black;
}

.show-info h2 {
    text-transform: uppercase;
    
}

.show-info h3 {
    line-height: 0em;
}

.soon {
    text-transform: none;
    line-height: 0.1em;
}

.soon h3, .previously h3 {
    text-shadow: 0px 0px 20px goldenrod;
}

.music-bio {
    font-size: 2em;
    line-height: 0.85em;
    padding: 0 10px;
}

.music-bio h2 {
    font-size: 1.52em;
    line-height: 0.9em;
}

.showtime {
    font-size: 2em;
    font-style: bold;
}

#anchor-logo {
    display: flex;
    align-items: center;
    justify-items: center;
    padding-top: 2em;
}

#anchor-logo img {
    max-height: 40vh;
    margin: auto;
}

#address-col {
    align-self: center;
    text-align: center;
    white-space: nowrap;
    padding: 0 0 2em 0;
}

#address-col a {
    margin: 1em;
}

#hours-col {
    align-self: center;
    text-align: center;
    text-transform: uppercase;
}

#twentyone {
    padding: 1.5em 0;
    text-transform: initial;
    font-size: 1.2em;
}

@media only screen and (aspect-ratio > 1) {
    #anchor-logo img {
        height: 100vh;
        min-height: 75vh;
    }

    #burger-icon {
        display: none;
    }

    #menu-links {
        display: block;
        font-size: clamp(1.5vw, 1.5em, 2em);
    }

    #reviews-wrapper {
        max-width: 80%;
        margin: 0 auto;
    }

    #music-wrapper {
        min-width: 60%;
        max-width: 75%;
        margin: 0 auto;
    }

    #frontpage {
        display: flex;
        align-content: center;
        justify-content: center;
        flex-direction: row;
        height: 75vh;
        gap: 20px;
    }

    #address-col {
        display: flex;
        flex-direction: column;
    }

    #toasttab-button, #reservation-button {
        justify-self: center;
        height: 1em;
        border: 2px solid seashell;
        border-radius: 5%;
        padding: 1em 0;
        margin: 2% 0;
        font-size: 1.5em;
        white-space: nowrap;
    }    

    #nav-logo img {
        min-height: 5em;
    }

    h1 {
        font-size: 4rem;
    }
    
    h2 {
        font-size: 2rem;
    }
    
    h3 {
        font-size: 1.75rem;
    }
    
    h4 {
        font-size: 1.75rem;
    }
    
    h5 {
        font-size: 1.5rem;
    }
}

@media only screen and (max-width: 851px) {
    #menu-links {
        font-size: 3vw;
    }

    .show {
        display: relative;
        width: 95vw;
    }

}

@media only screen and (aspect-ratio < 1) {
    
    .show {
        flex-direction: column;
        max-width: 90vw;
    }

}

